--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ beautifulsoup4==4.12.2
 blinker==1.6.2
 certifi==2022.9.24
 chardet==5.1.0
-cliapp==1.20180812.1
+#cliapp==1.20180812.1
 click==8.1.7
 cmdtest==0.32+git
 colorama==0.4.6
