--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ chardet==5.1.0
 #cliapp==1.20180812.1
 click==8.1.7
 colorama==0.4.6
-command-not-found==0.3
+#command-not-found==0.3
 cryptography==38.0.4
 cssselect==1.2.0
 cupshelpers==1.0
