--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ colorama==0.4.6
 #command-not-found==0.3
 cryptography==38.0.4
 cssselect==1.2.0
-cupshelpers==1.0
+#cupshelpers==1.0
 dbus-python==1.3.2
 defer==1.0.6
 distlib==0.3.7
