--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ colorama==0.4.6
 cryptography==38.0.4
 cssselect==1.2.0
 #cupshelpers==1.0
-dbus-python==1.3.2
+#dbus-python==1.3.2
 defer==1.0.6
 distlib==0.3.7
 distro==1.8.0
