--- a/requirements.txt
+++ b/requirements.txt
@@ -13,11 +13,11 @@ cryptography==38.0.4
 cssselect==1.2.0
 #cupshelpers==1.0
 #dbus-python==1.3.2
-defer==1.0.6
-distlib==0.3.7
-distro==1.8.0
-distro-info==1.5
-exceptiongroup==1.2.0
+#defer==1.0.6
+#distlib==0.3.7
+#distro==1.8.0
+#distro-info==1.5
+#exceptiongroup==1.2.0
 fastapi==0.108.0
 filelock==3.12.2
 gyp==0.1
